dark mode correction

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ header > article > div > div > img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  filter: saturate(0.8);
 }
 
 header > article > div {
